--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ paginate: 4
 paginate_path: "/page/:num/"
 comments: true
 
-source: source
+# source: source
 destination: _site
 
 # Sass configuration
