added octopress and updated config

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 title: Inner Demons, Meet Jesus
 description: "Want to surrender your life to God? First, you'll need to introduce your demons to the Lord..."
 keywords: ""
-url: http://change.me
-baseurl: null
+url: https://thatgalkelly.github.io/inner-demons
+baseurl: /inner-demons
 
 google_analytics:
 repo:
