added google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ keywords: ""
 url: https://thatgalkelly.github.io/inner-demons
 baseurl: /inner-demons
 
-google_analytics:
+google_analytics: UA-79516210-1
 repo:
 disqus_shortname: "innerdemonsmeetjesus"
 
